[package]
name = "scylla"
version = "0.1.0"
authors = ["Matt Butcher <matt.butcher@microsoft.com>", "Jianbo Sun <jianbo.sjb@alibaba-inc.com>"]
edition = "2018"

[dependencies]
kube = { version = "0.16.1", features = ["openapi"] }
k8s-openapi = { version = "0.5.1", features = ["v1_15"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1.5"
spectral = "0.6"
reqwest = "0.9"
log = "0.4"
env_logger = "0.6.1"
hyper = "0.12"
clap = "~2.33"
regex = "1.0"
lazy_static = "1.4.0"

[workspace]
members = [
    "healthscope",
]