[package]
name = "rudr"
version = "0.1.0"
authors = ["Matt Butcher <matt.butcher@microsoft.com>", "Jianbo Sun <jianbo.sjb@alibaba-inc.com>"]
edition = "2018"

[dependencies]
kube = "0.34.0"
k8s-openapi = { version = "0.8.0", features = ["v1_15"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1.5"
spectral = "0.6"
reqwest = "0.10"
log = "0.4"
env_logger = "0.6.1"
hyper = "0.13"
clap = "~2.33"
regex = "1.0"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
async-trait = "0.1.24"
kube-derive = "0.34.0"

[workspace]
members = [
    "healthscope",
]
