[package]
name = "healthscope"
version = "0.1.0"
authors = ["天元 <jianbo.sjb@alibaba-inc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.16.1", features = ["openapi"] }
k8s-openapi = { version = "0.5.1", features = ["v1_15"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1.5"
spectral = "0.6"
reqwest = "0.9"
log = "0.4"
env_logger = "0.6.1"
hyper = "0.12"
clap = "~2.33"
scylla = { path = '../' }
